# hermes-agent-zh

./: .env.example  .gitignore  .last-synced-sha  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: nightly.yml  pr-check.yml  release.yml
hermes_cli/: banner.py  tips.py
scripts/: apply.py  build.py  detect_changes.py  extract_strings.py  install.ps1  install.sh  translate.py  verify.py
translations/: .hash-cache.json  config.json  glossary.json
translations/cli/: banner.json  banner.py  commands.json  commands.py  default_soul.json  default_soul.py  doctor.json  doctor.py  setup.json  setup.py  tips.json  tips.py
translations/docs/: index.md
translations/docs/developer-guide/: acp-internals.md  adding-platform-adapters.md  adding-providers.md  adding-tools.md  agent-loop.md  architecture.md  browser-supervisor.md  context-compression-and-caching.md  context-engine-plugin.md  contributing.md  creating-skills.md  cron-internals.md  environments.md  extending-the-cli.md  gateway-internals.md  memory-provider-plugin.md  prompt-assembly.md  provider-runtime.md  session-storage.md  tools-runtime.md  trajectory-format.md
translations/docs/getting-started/: installation.md  learning-path.md  nix-setup.md  quickstart.md  termux.md  updating.md
translations/docs/guides/: automate-with-cron.md  aws-bedrock.md  azure-foundry.md  (+19 more)
translations/github/: PULL_REQUEST_TEMPLATE.md  bug_report.yml  feature_request.yml  setup_help.yml
translations/landing/: index.html
translations/readme/: AGENTS.md  CONTRIBUTING.md  README.md
(+298 files in other folders)
