[project]
name = "hermes-agent-zh"
version = "0.1.0"
description = "hermes-agent 中文翻译版 —— 自动翻译、自动同步、自动发版"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/lyy0709/hermes-agent-zh"
Upstream = "https://github.com/NousResearch/hermes-agent"
